[tool.poetry]
name = "etl-db-tools"
version = "0.1.0"
description = ""
authors = ["Niels <niels.kakes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
pyodbc = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
